// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper render with all steps completed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal Stepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper render with full-width 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal Stepper-fullWidth Stepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper render with hidden labels 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal Stepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label StepLabel-hidden MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label StepLabel-hidden MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label StepLabel-hidden MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label StepLabel-hidden MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal Stepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-completed"
            >
              <svg
                class="SvgCheckMinor24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.5 14.793l6-6 .707.707-6 6-.707.707L6.793 12.5l.707-.707 3 3z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root StepIcon-active"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="SvgChevronRight16-root StepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.5 6.793l.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="StepIcon-root"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer StepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="StepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
